swagger on all handlers
