# internal/api/rest/handlers.go
@@ -4,8 +4,8 @@ import (
 	"errors"
 	"net/http"
 
+	"github.com/google/uuid"
 	"github.com/meraiku/music_lib/internal/api/rest/request"
-	"github.com/meraiku/music_lib/internal/api/rest/response"
 	"github.com/meraiku/music_lib/internal/converter"
 	"github.com/meraiku/music_lib/internal/model"
 	"github.com/meraiku/music_lib/internal/repo"
@@ -17,13 +17,14 @@ func statusCheck(w http.ResponseWriter, r *http.Request) {
 	w.Write([]byte("OK"))
 }
 
-// @Summary Get Songs
-// @Description  Prints List of songs
-// @Tags Songs
-// @Produce json
-// @Success 200 {array} response.GetSongsResponse
-// @Failure 500 {object} APIError
-// @Router /api/songs [get]
+// @Summary		Get Songs
+// @Description	Prints List of songs
+// @Tags			Songs
+// @Produce		json
+// @Success		200	{array}		model.Song
+// @Failure		404	{object}	object
+// @Failure		500	{object}	APIError
+// @Router			/api/songs [get]
 func (i *Implementation) GetSongs(w http.ResponseWriter, r *http.Request) error {
 
 	i.log.DebugContext(r.Context(), "Handler started")
@@ -33,19 +34,22 @@ func (i *Implementation) GetSongs(w http.ResponseWriter, r *http.Request) error 
 		return err
 	}
 
-	out := make([]response.GetSongsResponse, len(songList))
-
-	for i, song := range songList {
-		out[i].ID = song.ID
-		out[i].Group = song.Group
-		out[i].Song = song.Song
-	}
-
 	i.log.DebugContext(r.Context(), "Handler done")
 
-	return i.JSON(w, http.StatusOK, out)
+	return i.JSON(w, http.StatusOK, songList)
 }
 
+// @Summary		Post Song
+// @Description	Add song to Library
+// @Tags			Songs
+// @Accept			json
+// @Produce		json
+// @Param			song	body		request.AddSongRequest	true	"Add song"
+// @Success		201		{object}	model.Song
+// @Failure		404		{object}	object
+// @Failure		422		{object}	APIError
+// @Failure		500		{object}	APIError
+// @Router			/api/songs [post]
 func (i *Implementation) PostSong(w http.ResponseWriter, r *http.Request) error {
 
 	i.log.DebugContext(r.Context(), "Handler started")
@@ -73,6 +77,14 @@ func (i *Implementation) PostSong(w http.ResponseWriter, r *http.Request) error 
 	return i.JSON(w, http.StatusCreated, song)
 }
 
+// @Summary		Delete Song
+// @Description	Deletes song from Library
+// @Tags			Songs
+// @Param			id	path	string	true	"Song ID"
+// @Success		204
+// @Failure		404	{object}	object
+// @Failure		500	{object}	APIError
+// @Router			/api/songs/{id} [delete]
 func (i *Implementation) DeleteSong(w http.ResponseWriter, r *http.Request) error {
 
 	i.log.DebugContext(r.Context(), "Handler started")
@@ -81,9 +93,8 @@ func (i *Implementation) DeleteSong(w http.ResponseWriter, r *http.Request) erro
 
 	req.ID = r.PathValue("id")
 
-	if req.ID == "" {
-		i.ErrorJSON(w, http.StatusBadRequest, ErrNoBody.Error())
-		return nil
+	if err := uuid.Validate(req.ID); err != nil {
+		return NewAPIError(http.StatusBadRequest, ErrInvalidID)
 	}
 
 	if err := i.musicService.DeleteSong(r.Context(), converter.FromModifySongRequestToModel(&req)); err != nil {
@@ -96,6 +107,19 @@ func (i *Implementation) DeleteSong(w http.ResponseWriter, r *http.Request) erro
 	return nil
 }
 
+// @Summary		Update Song Info
+// @Description	Updates song information in Library
+// @Tags			Songs
+// @Accept			json
+// @Produce		json
+// @Param			id		path		string						true	"Song ID"
+// @Param			song	body		request.ModifySongRequest	true	"Modify song info"
+// @Success		200		{object}	model.Song
+// @Failure		400		{object}	APIError
+// @Failure		404		{object}	object
+// @Failure		422		{object}	APIError
+// @Failure		500		{object}	APIError
+// @Router			/api/songs/{id} [put]
 func (i *Implementation) UpdateSong(w http.ResponseWriter, r *http.Request) error {
 
 	i.log.DebugContext(r.Context(), "Handler started")
@@ -111,11 +135,16 @@ func (i *Implementation) UpdateSong(w http.ResponseWriter, r *http.Request) erro
 
 	req.ID = r.PathValue("id")
 
+	if err := uuid.Validate(req.ID); err != nil {
+		return NewAPIError(http.StatusBadRequest, ErrInvalidID)
+	}
+
 	if errors := req.Validate(); errors != nil {
 		return InvalidRequestData(errors)
 	}
 
-	if err := i.musicService.UpdateSong(r.Context(), converter.FromModifySongRequestToModel(&req)); err != nil {
+	song, err := i.musicService.UpdateSong(r.Context(), converter.FromModifySongRequestToModel(&req))
+	if err != nil {
 		if errors.Is(err, repo.ErrSongIsNotExist) {
 			return NewAPIError(http.StatusBadRequest, err)
 		}
@@ -124,8 +153,7 @@ func (i *Implementation) UpdateSong(w http.ResponseWriter, r *http.Request) erro
 
 	i.log.DebugContext(r.Context(), "Handler done")
 
-	w.WriteHeader(http.StatusOK)
-	return nil
+	return i.JSON(w, http.StatusOK, song)
 }
 
 func (i *Implementation) GetText(w http.ResponseWriter, r *http.Request) error {
