# internal/api/rest/response/model.go
@@ -1,7 +1,0 @@
-package response
-
-type GetSongsResponse struct {
-	ID    string `json:"id"`
-	Group string `json:"group"`
-	Song  string `json:"song"`
-}
